--- a/IWP PROJECT/index.html
+++ b/IWP PROJECT/index.html
@@ -61,10 +61,10 @@
     <section class="contact-form">
                     <div class="info-text">
                             <center><h2>INDIA</h2></center>
-                            <center><p>Rohini,Delhi</p></center>
+                            <center><p>Delhi</p></center>
                     </div>
                         <div class="info-text">
-                            <center><h2>+91 9999050279</h2></center><br>
+                            <center><h2>+91 9********3</h2></center><br>
                             <center><p>Mon to Fri 9am to 6 pm</p></center><br>
                         </div>
                     </div>
@@ -74,8 +74,8 @@
                         </div>
                         <div class="profilefonts">
                             <center><a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/shiva_5851/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-                            <a href="https://www.linkedin.com/in/shiva-rajan-4197a71b5/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
                         </div>
                 
     </section>
